--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "graphql": "^14.6.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
